--- a/IoC/Fireflies.IoC.Abstractions/Fireflies.IoC.Abstractions.csproj
+++ b/IoC/Fireflies.IoC.Abstractions/Fireflies.IoC.Abstractions.csproj
@@ -1,9 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Authors>Fireflies.Tech</Authors>
+	<Description>Fireflies IoC abstractions</Description>
+	<Copyright>2023 Fireflies.tech</Copyright>
   </PropertyGroup>
 
 </Project>
