--- a/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.csproj
+++ b/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.csproj
@@ -1,9 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<Authors>Fireflies.Tech</Authors>
+	<Description>Fireflies IoC Autofac integration</Description>
+	<Copyright>2023 Fireflies.tech</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Fireflies.IoC.Core\Fireflies.IoC.Core.csproj" />
+    <ProjectReference Include="..\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
