--- a/IoC/Fireflies.IoC.Abstractions/Fireflies.IoC.Abstractions.csproj
+++ b/IoC/Fireflies.IoC.Abstractions/Fireflies.IoC.Abstractions.csproj
@@ -11,4 +11,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 </Project>
