--- a/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.csproj
+++ b/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.csproj
@@ -16,6 +16,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
 	</ItemGroup>
 
