--- a/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
+++ b/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
@@ -15,4 +15,8 @@
 		<ProjectReference Include="..\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
+
 </Project>
