--- a/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
+++ b/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-	<Authors>Fireflies.Tech</Authors>
-	<Description>Fireflies IoC TinyIoC integration</Description>
-	<Copyright>2023 Fireflies.tech</Copyright>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Authors>Fireflies.Tech</Authors>
+		<Description>Fireflies IoC TinyIoC integration</Description>
+		<Copyright>2023 Fireflies.tech</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Fireflies.IoC.Abstractions\Fireflies.IoC.Abstractions.csproj" />
+	</ItemGroup>
 
 </Project>
