--- a/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
+++ b/Logging/Fireflies.Logging.NLog/Fireflies.Logging.NLog.csproj
@@ -9,6 +9,7 @@
 		<Copyright>2023 Fireflies.tech</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>Icon-128x128.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -17,6 +18,7 @@
 
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="..\Images\Icon-128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 	<ItemGroup>
