--- a/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
+++ b/IoC/Fireflies.IoC.TinyIoC/Fireflies.IoC.TinyIoC.csproj
@@ -19,7 +19,7 @@
 
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\"/>
-		<None Include="..\Images\Icon-128x128.png" Pack="true" PackagePath="\" />
+		<None Include="..\..\Images\Icon-128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
