--- a/Logging/Fireflies.Logging.Abstractions/Fireflies.Logging.Abstractions.csproj
+++ b/Logging/Fireflies.Logging.Abstractions/Fireflies.Logging.Abstractions.csproj
@@ -15,6 +15,6 @@
 
 	<ItemGroup>
 		<None Include="README.md" Pack="true" PackagePath="\"/>
-		<None Include="..\Images\Icon-128x128.png" Pack="true" PackagePath="\" />
+		<None Include="..\..\Images\Icon-128x128.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 </Project>
