--- a/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.nuspec
+++ b/IoC/Fireflies.IoC.Autofac/Fireflies.IoC.Autofac.nuspec
@@ -11,6 +11,7 @@
     <tags>fireflies ioc autofac</tags>
     <dependencies>
       <dependency id="Fireflies.IoC.Abstractions" version="$version$" />
+      <dependency id="Autofac" version="6.5.0" />
     </dependencies>
   </metadata>
 </package>
